fix the index.css and test video in android
 android plugin videoPlayer is perfect in android 4.0.3
 Then ready to test in android 2.3.

--- a/assets/www/style/index.css
+++ b/assets/www/style/index.css
@@ -25,18 +25,17 @@
     width: 57px;
     height: 57px;
 }
-
-.ui-grid-c p {
-    text-align: center;
+.ui-block-d img {
+    width: 57px;
+    height: 57px;
 }
 
-ul.ui-grid-c {
-    list-style: none;
+.ui-grid-c div {
     height: 90px;
 }
 
-.ui-grid-c .ui-block-* {
-    float:left;
+.ui-grid-c p {
+    text-align: center;
 }
 
 #map div label {
