--- a/assets/www/style/index.css
+++ b/assets/www/style/index.css
@@ -1,3 +1,9 @@
+
+a {
+    text-decoration: none;
+}
+
+
 #logs {
     width: 100%;
     height: 120 dp;
@@ -28,11 +34,6 @@
 
 .ui-grid-c p {
     text-align: center;
-}
-
-ul.ui-grid-c {
-    list-style: none;
-    height: 90px;
 }
 
 .ui-grid-c .ui-block-* {
@@ -76,8 +77,9 @@ ul.ui-grid-c {
     overflow: hidden;
 }
 
-.nav-glyphish-example .ui-btn {
-    border: 0px
+.nav-glyphish-example, .nav-glyphish-example .ui-btn {
+    border: 0;
+    margin: 0;
 }
 .nav-glyphish-example .ui-btn .ui-btn-inner {
     padding-top: 40px !important;
@@ -109,4 +111,28 @@ ul.ui-grid-c {
     background: url("../images/icons-white/84-lightbulb@2x.png") 50% 50% no-repeat;
     background-size: 14px 21px;
 }
+
+/**  
+ * ui-header    
+ * */
+
+/*.ui-header {
+    height: 88px;
+}*/
+
+/*.ui-content {
+    margin-top: 10px;
+    height: auto;
+}*/
+
+.ui-footer {
+    padding: 0;
+    margin: 0;
+}
+
+
+
+
+
+
 
