--- a/assets/www/style/index.css
+++ b/assets/www/style/index.css
@@ -3,6 +3,21 @@ a {
     text-decoration: none;
 }
 
+#splashScreen {
+    
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #5F9CC5;
+    opacity: 0.5;
+    display: block;
+    z-index: 9999;
+    margin: 0;
+    padding: 0;
+    margin-bottom: -100px;
+}
 
 #logs {
     width: 100%;
