--- a/assets/www/style/index.css
+++ b/assets/www/style/index.css
@@ -7,25 +7,6 @@ a {
     text-decoration: none;
 }
 
-/*#splashScreen {
-    
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-color: #5F9CC5;
-    opacity: 0.5;
-    display: block;
-    margin: 0;
-    padding: 0;
-    margin-bottom: -100px;
-}*/
-
-/*#indexOfApp {
-	height: 240 dp;
-}*/ /* has no effect */
-
 #logs {
     width: 100%;
     height: 120 dp;
@@ -65,6 +46,7 @@ a {
 
 .ui-grid-c .ui-block-* {
     float:left;
+    border: 0;
 }
 
 #map div label {
@@ -107,6 +89,8 @@ a {
 .nav-glyphish-example, .nav-glyphish-example .ui-btn {
     border: 0;
     margin: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 .nav-glyphish-example .ui-btn .ui-btn-inner {
     padding-top: 40px !important;
@@ -138,19 +122,6 @@ a {
     background: url("../images/icons-white/84-lightbulb@2x.png") 50% 50% no-repeat;
     background-size: 14px 21px;
 }
-
-/**  
- * ui-header    
- * */
-
-/*.ui-header {
-    height: 88px;
-}*/
-
-/*.ui-content {
-    margin-top: 10px;
-    height: auto;
-}*/
 
 .ui-footer {
     padding: 0;
