--- a/assets/www/style/index.css
+++ b/assets/www/style/index.css
@@ -107,7 +107,6 @@ a {
     height: 30px !important;
     margin-left: -15px !important;
     box-shadow: none !important;
-    -moz-box-shadow: none !important;
     -webkit-box-shadow: none !important;
     -webkit-border-radius: 0 !important;
     border-radius: 0 !important;
@@ -150,4 +149,6 @@ a {
 	vertical-align: middle;
 }
 
-
+.favorBtnText {
+	font-size: 16px;
+}
