--- a/assets/www/style/index.css
+++ b/assets/www/style/index.css
@@ -52,6 +52,14 @@ a {
     border: 0;
 }
 
+.ui-grid-c {
+    margin-bottom: -8px !important;
+}
+
+.ui-overlay-c .ui-body-c {
+    background-image: none;
+}
+
 #map div label {
     font-size: 14pt;
 }
